spacing fixes

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -57,3 +57,7 @@
     padding: $s-size;
     margin: 0;
 }
+
+.container__badDiv {
+    padding-top: $m-size;
+}
